fixed alignments

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     color: #F29F58;
     background-image: url(assets/concept5.png);
     background-size: cover;
+    background-attachment: fixed;
     background-blend-mode: overlay;
 }
 
@@ -31,7 +32,7 @@ header {
 }
 
 main {
-    max-width: 95%;
+    max-width: 85%;
     margin: 2rem auto;
     background: var(--bg-transparent);
     padding: 2rem;
